--- a/index.html
+++ b/index.html
@@ -83,25 +83,25 @@
                link = document.getElementById('site_link').value;
                if (link == "") {
                    // html code block
-                   document.getElementById("html_code").value = '<img src="http://www.warbandbanner.cf/banner.py?ip=' + ip + '&port=' + port + '&banner=' + banner + '">';
+                   document.getElementById("html_code").value = '<img src="https://warbandbanner.masonrowe.com/banner.py?ip=' + ip + '&port=' + port + '&banner=' + banner + '">';
 
                    // forum bb code block
-                   document.getElementById("forum_code").value = '[img]' + 'http://www.warbandbanner.cf/banner.py?ip=' + ip + '&port=' + port + '&banner=' + banner + '[/img]';
+                   document.getElementById("forum_code").value = '[img]' + 'https://warbandbanner.masonrowe.com/banner.py?ip=' + ip + '&port=' + port + '&banner=' + banner + '[/img]';
 
                    
                } else {
                    // html code block
-                   document.getElementById("html_code").value = '<a href="' + link + '"><img src="http://www.warbandbanner.cf/banner.py?ip=' + ip + '&port=' + port + '&banner=' + banner + '"><\/a>';
+                   document.getElementById("html_code").value = '<a href="' + link + '"><img src="https://warbandbanner.masonrowe.com/banner.py?ip=' + ip + '&port=' + port + '&banner=' + banner + '"><\/a>';
 
                    // forum bb code block
-                   document.getElementById("forum_code").value = '[url=' + link + '][img]' + 'http://www.warbandbanner.cf/banner.py?ip=' + ip + '&port=' + port + '&banner=' + banner + '[/img][/url]';
+                   document.getElementById("forum_code").value = '[url=' + link + '][img]' + 'https://warbandbanner.masonrowe.com/banner.py?ip=' + ip + '&port=' + port + '&banner=' + banner + '[/img][/url]';
                    
                }
                // preview image
-               document.getElementById("preview_image").src = 'http://www.warbandbanner.cf/banner.py?ip=' + ip + '&port=' + port + '&banner=' + banner;
+               document.getElementById("preview_image").src = 'https://warbandbanner.masonrowe.com/banner.py?ip=' + ip + '&port=' + port + '&banner=' + banner;
 
                // direct image link
-               document.getElementById("image_link").value = 'http://www.warbandbanner.cf/banner.py?ip=' + ip + '&port=' + port + '&banner=' + banner;
+               document.getElementById("image_link").value = 'https://warbandbanner.masonrowe.com/banner.py?ip=' + ip + '&port=' + port + '&banner=' + banner;
 
            } else {
                alert("Port Number is invalid! Try again.");
